Feature/t1 p 94 detailansicht vorlesung bearbeiten (#41)
* feat: add feature to assign lecturer to course and refactor SingleCourseView

* refactor: fix spacing and such

* refactor: fix some routing issues and merge conflicts

---------

Co-authored-by: Florian Weist <florian.weist@telekom.de>